deploying-laravel-7-with-mysql-and-redis/laravel-deployment-and-service.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: laravel-deployment
  labels:
    app: laravel
spec:
  selector:
    matchLabels:
      app: laravel
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel
          image: jxlwqq/laravel-7-kubernetes-demo
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              port: 80
              path: /
              scheme: HTTP
          livenessProbe:
            httpGet:
              port: 80
              path: /
              scheme: HTTP
---
kind: Service
apiVersion: v1
metadata:
  name: laravel-service
  labels:
    app: laravel
spec:
  selector:
    app: laravel
  ports:
    - port: 80
      targetPort: 80
