deploying-laravel-7-with-mysql-and-redis/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: laravel-ingress
  labels:
    app: laravel
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: laravel-service
              servicePort: 80
